Added Validation check function

--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -53,7 +53,6 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script
   type="text/javascript"
-  charset="UTF-8"
   src="../scripts/scripts.TA.js">
   </script>
 </head>
@@ -248,87 +247,6 @@
             <option>CSCI 3000 MK</option>
           </select>
         </div>
-<<<<<<< HEAD
-        <div class="app-main__outer">
-          <div class="app-main__inner">
-            <div class="row">
-              <!-- Hours of submission by Ab -->
-              <div class="col-md-12 col-lg-6">
-                <div class="mb-3 card">
-                  <div class="ml-3 mt-3 card-title">Hour Submission</div>
-                  <div class="ml-3 mr-3 position-relative form-group">
-                    <label for="exampleCustomSelect" class=""
-                      >Select Course</label
-                    ><select
-                      type="select"
-                      id="exampleCustomSelect"
-                      name="customSelect"
-                      class="custom-select"
-                    >
-                      <option value="">Select</option>
-                      <option>CSCI 1800 MK</option>
-                      <option>CSCI 2100 TA</option>
-                      <option>CSCI 3000 MK</option>
-                    </select>
-                  </div>
-                  <button
-                    type="button"
-                    class="btn ml-2 mb-2 mr-2 btn-primary"
-                    data-toggle="modal"
-                    data-target="#modalTAHSub"
-                  >
-                    Feedback
-                  </button>
-                </div>
-              </div>
-
-              <!-- Calendar by Su -->
-              <div class="col-md-12 col-lg-6">
-                <div class="mb-3 card">
-				<div class="card-body">
-				<div class="card-title">Calendar</div>
-                  <div class="calendar__header">
-                    <div class="card-title">Mon</div>
-                    <div class="card-title">Tue</div>
-                    <div class="card-title">Wed</div>
-                    <!-- <div>thu</div>
-                                        <div>fri</div>
-                                        <div>sat</div>
-                                        <div>sun</div> -->
-                  </div>
-                  <div class="calendar__week">
-                    <div class="calendar__day">
-                      <div class="calender_date card-title">Jul 1</div>
-                      <p>
-                        11:35-12:25 <br/>
-                        Busy
-                      </p>
-                    </div>
-                    <div class="calendar__day">
-                      <div class="calender_date card-title">Jul 2</div>
-                      <p>
-                        2:25-3:55 <br />
-                        Busy
-                      </p>
-                    </div>
-                    <div class="calendar__day">
-                      <div class="calender_date card-title">Jul 3</div>
-                      <p>
-                        4:35-5:25 <br />
-                        Busy
-                      </p>
-                    </div>
-					</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Courses and Feedback by Nh or Ab (Need to decide) -->
-            <div class="row"></div>
-
-            <!-- This is the basic information by Su-->
-            <div class="row"></div>
-=======
         <button
         type="button"
         class="btn ml-2 mb-2 mr-2 btn-primary"
@@ -339,7 +257,6 @@
       </button>
     </div>
   </div>
->>>>>>> b1b4e4db3463fb25859266660da9f116ae08ee88
 
   <!-- Calendar by Su -->
   <div class="col-md-12 col-lg-6">
@@ -444,27 +361,28 @@ aria-hidden="true"
               >Total Hours</label
               ><select
               type="select"
-              id="exampleCustomSelect"
+              id="HourSub"
               name="customSelect"
               class="custom-select"
               >
               <option value="">Select</option>
-              <option>25</option>
-              <option>35</option>
-              <option>45</option>
-              <option>65</option>
-              <option>90</option>
-              <option>110</option>
-              <option>130</option>
-              <option value="True">Other</option>
+              <option value="25">25</option>
+              <option value="35">35</option>
+              <option value="45">45</option>
+              <option value="65">65</option>
+              <option value="90">90</option>
+              <option value="110">110</option>
+              <option value="130">130</option>
+              <option value="0">Other</option>
             </select>
           </div>
-          <div class="position-relative form-group True box">
+          <div class="position-relative form-group 0 box">
             <label for="examplePassword11" class=""
             >Note: Above TA assignment together with other TA
             assignments for other courses cannot exceed 130 hours
             per semester - as per (^) </label
             ><input
+            id ="totalHours"
             placeholder="Enter total hours"
             type="text"
             class="form-control"
@@ -477,6 +395,7 @@ aria-hidden="true"
               >
             </div>
             <input
+            name="hour"
             type="text"
             class="form-control"
             placeholder="Enter hours"
@@ -490,6 +409,7 @@ aria-hidden="true"
               >
             </div>
             <input
+            name="hour"
             type="text"
             class="form-control"
             placeholder="Enter hours"
@@ -503,6 +423,7 @@ aria-hidden="true"
               >
             </div>
             <input
+            name="hour"
             type="text"
             class="form-control"
             placeholder="Enter hours"
@@ -516,6 +437,7 @@ aria-hidden="true"
               >
             </div>
             <input
+            name="hour"
             type="text"
             class="form-control"
             placeholder="Enter hours"
@@ -528,7 +450,7 @@ aria-hidden="true"
   </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" data-dismiss="modal">
+  <button type="button" class="btn btn-primary" onclick="checkTotalHours()" data-dismiss="modal">
     Submit
   </button>
 </div>
