--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -365,22 +365,22 @@
                         >Total Hours</label
                       ><select
                         type="select"
-                        id="exampleCustomSelect"
+                        id="HourSub"
                         name="customSelect"
                         class="custom-select"
                       >
                         <option value="">Select</option>
-                        <option>25</option>
-                        <option>35</option>
-                        <option>45</option>
-                        <option>65</option>
-                        <option>90</option>
-                        <option>110</option>
-                        <option>130</option>
-                        <option value="True">Other</option>
+                        <option value="25">25</option>
+                        <option value="35">35</option>
+                        <option value="45">45</option>
+                        <option value="65">65</option>
+                        <option value="90">90</option>
+                        <option value="110">110</option>
+                        <option value="130">130</option>
+                        <option value="0">Other</option>
                       </select>
                     </div>
-                    <div class="position-relative form-group True box">
+                    <div class="position-relative form-group 0 box">
                       <label for="examplePassword11" class=""
                         >Note: Above TA assignment together with other TA
                         assignments for other courses cannot exceed 130 hours
@@ -398,6 +398,7 @@
                         >
                       </div>
                       <input
+                        name="hour"
                         type="text"
                         class="form-control"
                         placeholder="Enter hours"
@@ -411,6 +412,7 @@
                         >
                       </div>
                       <input
+                        name="hour"
                         type="text"
                         class="form-control"
                         placeholder="Enter hours"
@@ -424,6 +426,7 @@
                         >
                       </div>
                       <input
+                        name="hour"
                         type="text"
                         class="form-control"
                         placeholder="Enter hours"
@@ -437,6 +440,7 @@
                         >
                       </div>
                       <input
+                        name="hour"
                         type="text"
                         class="form-control"
                         placeholder="Enter hours"
@@ -449,7 +453,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">
+            <button type="button" class="btn btn-primary" onclick="checkTotalHours()" data-dismiss="modal">
               Submit
             </button>
           </div>
