Changed header names and links

--- a/src/screens/profile.html
+++ b/src/screens/profile.html
@@ -56,7 +56,8 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div class="logo-src"></div>
+          <div><h5>DALTAMS</h5></div>
+          <div><h6>Job Dashboard</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button
@@ -186,7 +187,7 @@
                 <li>
                   <a href="profile.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-user"></i>
-                    My profile
+                    My Profile
                   </a>
                 </li>
 
@@ -239,9 +240,6 @@
                     class="rounded-circle"
                   />
                   <h5 class="card-title d-inline-block">Don Joe</h5>
-                  <h6 class="card-subtitle d-inline-block">
-                    Teaching Assistant
-                  </h6>
                   <br /><br />
                   <pre>
 B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
@@ -351,7 +349,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                     <tbody>
                       <tr>
                         <th scope="row">
-                          <a data-toggle="modal" href="#jobPostModal">99999</a>
+                          <a href="indivJobDet.html">99999</a>
                         </th>
                         <td>CSCI 1120</td>
                         <td>
@@ -364,7 +362,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a data-toggle="modal" href="#jobPostModal">99999</a>
+                          <a href="indivJobDet.html">99999</a>
                         </th>
                         <td>CSCI 1120</td>
                         <td>
@@ -377,7 +375,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a data-toggle="modal" href="#jobPostModal">99999</a>
+                          <a href="indivJobDet.html">99999</a>
                         </th>
                         <td>CSCI 1120</td>
                         <td>
@@ -390,7 +388,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a data-toggle="modal" href="#jobPostModal">99999</a>
+                          <a href="indivJobDet.html">99999</a>
                         </th>
                         <td>CSCI 1120</td>
                         <td>
