--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1253,7 +1253,7 @@
                 </li>
 
                 <li>
-                  <a href="jobposting.html">
+                  <a href="jobposting.html" target="_blank">
                     <i class="metismenu-icon pe-7s-file"></i>
                     View Jobs
                   </a>
@@ -1295,9 +1295,8 @@
                   <div class="card-body">
                     <h5 class="card-title">Post A New Job</h5>
                     <form class="">
-                      <div class="position-relative form-group">
-                        <label for="facultySelection" class="">Course</label
-                        ><select
+                      <div class="position-relative form-group mt-3">
+                        <select
                           name="typeselect"
                           id="typeSelection"
                           class="form-control"
@@ -1326,7 +1325,7 @@
               <div class="col-md-12 col-lg-6">
                 <div class="mb-3 card">
                   <div class="card-body">
-                    <div class="card-title">Calendar</div>
+                    <div class="card-title">Schedule</div>
                     <div class="calendar__header">
                       <div class="card-title">Mon</div>
                       <div class="card-title">Tue</div>
@@ -1341,21 +1340,21 @@
                         <div class="calender_date card-title">Jul 1</div>
                         <p>
                           11:35-12:25 <br />
-                          Busy
+                          Interview
                         </p>
                       </div>
                       <div class="calendar__day">
                         <div class="calender_date card-title">Jul 2</div>
                         <p>
                           2:25-3:55 <br />
-                          Busy
+                          CSCI 2110 OH
                         </p>
                       </div>
                       <div class="calendar__day">
                         <div class="calender_date card-title">Jul 3</div>
                         <p>
                           4:35-5:25 <br />
-                          Busy
+                          CSCI 3100 Cls
                         </p>
                       </div>
                     </div>
@@ -1370,7 +1369,7 @@
                 <div
                   class="card-body row align-items-center justify-content-between"
                 >
-                  <h5 class="card-title">Courses</h5>
+                  <h5 class="card-title">Current Courses</h5>
                   <a class="btn mr-2 mb-2 btn-primary" href="pcourses.html">
                     More
                   </a>
