--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -186,7 +186,7 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="jobs.html">
+                  <a href="jobs.html" target="_blank">
                     <i class="metismenu-icon pe-7s-pendrive"></i>
                     Jobs
                   </a>
