Added cards to Professor Dashboard

--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1253,7 +1253,7 @@
                 </li>
 
                 <li>
-                  <a href="jobposting.html" target="_blank">
+                  <a href="job.html" target="_blank">
                     <i class="metismenu-icon pe-7s-file"></i>
                     View Jobs
                   </a>
@@ -1513,6 +1513,120 @@
                       </li>
                     </ul>
                   </nav>
+                </div>
+              </div>
+            </div>
+
+            <!-- Applications -->
+            <div class="row col-md-12">
+              <div class="main-card mb-3 card">
+                <div class="card-body">
+                  <h5 class="card-title">Application</h5>
+                  <table class="mb-0 table table-hover table-responsive">
+                    <thead>
+                      <tr>
+                        <th>Job ID</th>
+                        <th>Course ID</th>
+                        <th>Applicants</th>
+                        <th>Deadline</th>
+                        <th>Details</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">99999</th>
+                        <td>CSCI 1120</td>
+                        <td class="badge">13</td>
+                        <td>2077-02-31 12.00</td>
+                        <td>
+                          <button
+                            class="mb-2 mr-2 btn-transition btn btn-outline-secondary"
+                          >
+                            View
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">99998</th>
+                        <td>CSCI 1120</td>
+                        <td class="badge">17</td>
+                        <td>2077-02-31 12.00</td>
+                        <td>
+                          <button
+                            class="mb-2 mr-2 btn-transition btn btn-outline-secondary"
+                          >
+                            View
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">99997</th>
+                        <td>CSCI 1120</td>
+                        <td class="badge">15</td>
+                        <td>2077-02-31 12.00</td>
+                        <td>
+                          <button
+                            class="mb-2 mr-2 btn-transition btn btn-outline-secondary"
+                          >
+                            View
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">99996</th>
+                        <td>CSCI 1120</td>
+                        <td class="badge">18</td>
+                        <td>2077-02-31 12.00</td>
+                        <td>
+                          <button
+                            class="mb-2 mr-2 btn-transition btn btn-outline-secondary"
+                          >
+                            View
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
+            <!--Interviews-->
+            <div class="row col-md-12">
+              <div class="main-card mb-3 card">
+                <div class="card-body">
+                  <h5 class="card-title">Interview</h5>
+                  <table class="mb-0 table table-hover table-responsive">
+                    <thead>
+                      <tr>
+                        <th>Job ID</th>
+                        <th>Course ID</th>
+                        <th>Interviewee</th>
+                        <th>Date of Interview</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">99999</th>
+                        <td>CSCI 1120</td>
+                        <td>First Last</td>
+                        <td>2077-02-31 12.00</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">99999</th>
+
+                        <td>CSCI 1120</td>
+                        <td>First Last</td>
+                        <td>2077-02-31 12.00</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">99999</th>
+                        <td>CSCI 1120</td>
+                        <td>First Last</td>
+                        <td>2077-02-31 12.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
