Added the Jobs Approval page

--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1253,7 +1253,7 @@
                 </li>
 
                 <li>
-                  <a href="job.html" target="_blank">
+                  <a href="jobs.html" target="_blank">
                     <i class="metismenu-icon pe-7s-file"></i>
                     View Jobs
                   </a>
