Fixed the hour sub modal grey out issue

--- a/src/screens/TA.html
+++ b/src/screens/TA.html
@@ -265,44 +265,49 @@
               <!-- Calendar by Su -->
               <div class="col-md-12 col-lg-6">
                 <div class="mb-3 card">
-                  <div class="card-body">
-                    <div class="card-title">Schedule</div>
-                    <div class="calendar__header">
-                      <div class="card-title">Mon</div>
-                      <div class="card-title">Tue</div>
-                      <div class="card-title">Wed</div>
-                      <!-- <div>thu</div>
-                                        <div>fri</div>
-                                        <div>sat</div>
-                                        <div>sun</div> -->
+                  <div class="calendar__header">
+                    <div class="card-title">Mon</div>
+                    <div class="card-title">Tue</div>
+                    <div class="card-title">Wed</div>
+                  </div>
+                  <div class="calendar__week">
+                    <div class="calendar__day">
+                      <div class="calender_date card-title">1</div>
+                      <p class="card-subtitle">
+                        11:35-12:25 <br />
+                        Busy
+                      </p>
                     </div>
-                    <div class="calendar__week">
-                      <div class="calendar__day">
-                        <div class="calender_date card-title">Jul 1</div>
-                        <p>
-                          11:35-12:25 <br />
-                          Interview
-                        </p>
-                      </div>
-                      <div class="calendar__day">
-                        <div class="calender_date card-title">Jul 2</div>
-                        <p>
-                          2:25-3:55 <br />
-                          CSCI 2110 OH
-                        </p>
-                      </div>
-                      <div class="calendar__day">
-                        <div class="calender_date card-title">Jul 3</div>
-                        <p>
-                          4:35-5:25 <br />
-                          CSCI 3100 Cls
-                        </p>
-                      </div>
+                    <div class="calendar__day">
+                      <div class="calender_date card-title">2</div>
+                      <p class="card-subtitle">
+                        2:25-3:55 <br />
+                        Busy
+                      </p>
+                    </div>
+                    <div class="calendar__day">
+                      <div class="calender_date card-title">3</div>
+                      <p class="card-subtitle">
+                        4:35-5:25 <br />
+                        Busy
+                      </p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <!-- Courses and Feedback by Nh or Ab (Need to decide) -->
+            <div class="row"></div>
+
+            <!-- This is the basic information by Su-->
+            <div class="row"></div>
+
+            <!-- This is the Hours of Work and payrate of the TA by Undecided.-->
+            <div class="row"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="./assets/scripts/main.js"></script>
     <!-- Modal TA Hour Submission-->
     <div
@@ -448,7 +453,12 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" onclick="checkTotalHours()" data-dismiss="modal">
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="checkTotalHours()"
+              data-dismiss="modal"
+            >
               Submit
             </button>
           </div>
