FIxed links and reordered the side-bar links

--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -723,16 +723,16 @@
                 </li>
 
                 <li>
-                  <a href="jobposting.html">
-                    <i class="metismenu-icon pe-7s-file"></i>
-                    View Jobs
+                  <a href="pcourses.html" class="mm-active">
+                    <i class="metismenu-icon pe-7s-id"></i>
+                    My Courses
                   </a>
                 </li>
 
                 <li>
-                  <a href="pcourses.html" class="mm-active">
-                    <i class="metismenu-icon pe-7s-id"></i>
-                    My Courses
+                  <a href="jobs.html">
+                    <i class="metismenu-icon pe-7s-file"></i>
+                    View Jobs
                   </a>
                 </li>
               </ul>
