--- a/src/screens/TAcourses.html
+++ b/src/screens/TAcourses.html
@@ -109,27 +109,26 @@
                 <ul class="vertical-nav-menu metismenu">
 
                   <li>
-                    <a href="jobs.html">
-                      <i class="metismenu-icon pe-7s-pendrive"></i>
-                      Jobs
-                    </a>
-                  </li>
-
-
-                  <li>
-                    <a href="TA.html">
+                    <a href="TA.php">
                       <i class="metismenu-icon pe-7s-user"></i>
                       My Dashboard
                     </a>
 
                   </li>
                   <li>
-                    <a href="courses.html" class="mm-active">
+                    <a href="TAcourses.html" class="mm-active">
                       <i class="metismenu-icon pe-7s-file"></i>
                       My Courses
 
                     </a>
 
+                  </li>
+                  
+                  <li>
+                    <a href="jobs.html" target="_blank">
+                      <i class="metismenu-icon pe-7s-pendrive"></i>
+                      View Jobs
+                    </a>
                   </li>
                 </ul>
               </div>
