--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1258,7 +1258,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="jobs.html" target="_blank">
+                  <a href="pJobs.html" target="_blank">
                     <i class="metismenu-icon pe-7s-file"></i>
                     View Jobs
                   </a>
