--- a/src/screens/pJobs.html
+++ b/src/screens/pJobs.html
@@ -57,7 +57,7 @@
       <div class="app-header header-shadow">
         <div class="app-header__logo">
           <div><h5>DALTAMS</h5></div>
-          <div><h6>Job Dashboard</h6></div>
+          <div><h6>Job Dashboard (Prof View)</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button
