--- a/src/screens/jobposting.html
+++ b/src/screens/jobposting.html
@@ -18,7 +18,7 @@ Use to display a list of jobs. -->
         <div class="app-header header-shadow">
             <div class="app-header__logo">
                 <div><h5>DALTAMS</h5></div>
-				<div><h6>Student Dashboard</h6></div>
+				<div><h6>Job Dashboard</h6></div>
                 <div class="header__pane ml-auto">
                     <div>
                         <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
