--- a/src/screens/pcourses.html
+++ b/src/screens/pcourses.html
@@ -728,7 +728,12 @@
                     My Courses
                   </a>
                 </li>
-
+                <li>
+                  <a href="pHourAprv.php">
+                    <i class="metismenu-icon pe-7s-file"></i>
+                    Hours Approval
+                  </a>
+                </li>
                 <li>
                   <a href="jobs.html">
                     <i class="metismenu-icon pe-7s-file"></i>
