--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1258,6 +1258,12 @@
                   </a>
                 </li>
                 <li>
+                  <a href="pPostings.html">
+                    <i class="metismenu-icon pe-7s-file"></i>
+                    My Postings
+                  </a>
+                </li>
+                <li>
                   <a href="pHourAprv.php">
                     <i class="metismenu-icon pe-7s-file"></i>
                     Hours Approval
