--- a/src/screens/pPostings.html
+++ b/src/screens/pPostings.html
@@ -1246,7 +1246,7 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="Prof.html" class="mm-active">
+                  <a href="Prof.html">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My Dashboard
                   </a>
@@ -1258,7 +1258,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="pPostings.html">
+                  <a href="pPostings.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-file"></i>
                     My Postings
                   </a>
