--- a/src/screens/Prof.html
+++ b/src/screens/Prof.html
@@ -1120,7 +1120,7 @@
   </head>
   <body class="">
     <div
-      class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header closed-sidebar-mobile closed-sidebar"
+      class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header"
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
